force-app/main/default/objects/Game_Song_Played__c/Game_Song_Played__c.object-meta.xml
<CustomObject>
    <label>Game Song Played</label>
    <nameField>
        <displayFormat>GSP-{0000}</displayFormat>
        <label>Game Song Played Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Songs Played</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>