force-app/main/default/objects/Game_Song_Played__c/fields/Game_Song__c.field-meta.xml
<CustomField>
    <fullName>Game_Song__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Game Song</label>
    <referenceTo>Game_Song__c</referenceTo>
    <relationshipLabel>Game Songs Played</relationshipLabel>
    <relationshipName>Game_Songs_Played</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>